# attitude

./: .gitignore  ChangeLog.md  LICENSE  README.md  products.md  pyproject.toml
src/: configuration.py  date_calculator.py  exceptions.py
src/apps/: attitude.py  merge_sp3c_single_sat.py  orbits.py  plot_tropo_sinex.py  prepyda.py  rinex.py  satmass.py  vmf.py
src/attitude/: attitude.py  cddis_downloader.py  copernicus_downloader.py  downloader.py  preprocess.py
src/cnesfr/: cli.py  parsemass.py
src/parsers/: cnes_mass.py  cryosat_attitude.py  swot_attitude.py  tropo_sinex.py
src/prepattitude/: __init__.py  cli.py  configuration.py  date_calculator.py  downloader.py  jason.py  preprocess.py  swot.py
src/prepattitude/basedownl/: cddis_downloader.py  copernicus_downloader.py  ign_downloader.py
src/preprocessors/: attitude.py
src/sources/: attitude.py  cddis.py  copernicus.py  cryosat.py  ids.py  ign.py  orbits.py  rinex.py  satmass.py  vmf.py
tests/: test_date_calculator.py
