[project]
name = "prepattitude"
version = "0.1.0"
description = "Satellite attitude computations"
readme = "README.md"
authors = [
    { name = "vangelis-z", email = "vangelis.zacharis@disroot.org" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.0.1",
    "boto3>=1.37.8",
    "numpy>=2.2.3",
    "opnieuw>=3.0.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

[project.scripts]
prepattitude = "prepattitude.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bpython>=0.25",
    "pylint>=3.3.4",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]
